[package]
name = "pazi"
version = "0.4.1"
description = "A fast autojump helper"
authors = ["Euan Kemp <euank@euank.com>"]
homepage = "https://github.com/euank/pazi"
repository = "https://github.com/euank/pazi"
readme = "README.md"
keywords = ["autojump", "shell", "productivity-tool"]
license = "GPL-3.0"
edition = "2021"

[dependencies.clap]
version = "~2"
default-features = false
# Remove 'suggestions' feature, see #60
features = ["color", "vec_map"]

[dependencies]
crossbeam-channel = "0.4"
directories = "~2"
env_logger = "~0.11"
libc = "~0.2"
log = "~0.4"
rmp-serde = "~1.3"
serde = { version = "~1", features = [ "derive" ] }
signal-hook = "0.1.16"
snailquote = "0.3.1"
tempfile = "3"
termion = "~1"
which = "4"
anyhow = "1.0.27"
