[package]
name = "pazi-internal"
description = "internal tests and benchmarks for pazi"
version = "0.1.0"
authors = ["Euan Kemp <euank@euank.com>"]
edition = "2018"

[dependencies]
tempdir = "~0.3"
pty = "~0.2"
vte = "~0.6"
pazi = { path = ".." }
libc = "~0.2"
rand = "0.7"

[features]
default = []
nightly = []
