[package]
name = "pazi-internal"
description = "internal tests and benchmarks for pazi"
version = "0.1.0"
authors = ["Euan Kemp <euank@euank.com>"]
edition = "2021"

[dependencies]
tempdir = "~0.3"
pty = "~0.2"
vte = "~0.5"
pazi = { path = ".." }
libc = "~0.2"
rand = "0.9"

[features]
default = []
nightly = []
